# ery-rs

./: .gitignore  Cargo.toml  Readme.md
src/: app.rs  ery.rs  event.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs
src/app/: ery.rs
src/tui/: ui.rs
